--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 @font-face {
-    font-family: 'open_sansregular';
-    src: url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
-         url('../fonts/opensans-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'open_sansregular';
+	src: url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
+	url('../fonts/opensans-regular-webfont.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'open_sanssemibold';
-    src: url('../fonts/opensans-semibold-webfont.woff2') format('woff2'),
-         url('../fonts/opensans-semibold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'open_sanssemibold';
+	src: url('../fonts/opensans-semibold-webfont.woff2') format('woff2'),
+	url('../fonts/opensans-semibold-webfont.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
 html{
 	height: 100%;
@@ -35,8 +35,8 @@ header {
 
 .menu-left {
 	color: #666;
-    cursor: pointer;
-    padding: 13px;
+	cursor: pointer;
+	padding: 13px;
 }
 
 nav {
@@ -86,7 +86,7 @@ section {
 	border: 1px solid #d3d7df;
 	background: #fff;
 	display: table;
-    width: 100%;
+width: 100%;
 	-webkit-box-shadow: 0 0 3px 1px #d3d8de;
 	box-shadow: 0 0 3px 1px #d3d8de;
 }
@@ -173,7 +173,7 @@ section {
 	box-shadow: 0 0 3px 1px #d3d8de;
 }
 
-.fldsWrap  {
+.fldsWrap {
 	border-bottom: 1px solid #dddddd;
 	margin: 0;
 }
@@ -223,11 +223,11 @@ section {
 }
 .buttonGroups .btn {
 	font: 12px/20px "open_sanssemibold";
-    border: 1px solid #d9d9d9;
-    border-radius: 2px;
-    padding: .25rem 1rem;
-    color: #333333;
-    margin-right: .75rem;
+border: 1px solid #d9d9d9;
+border-radius: 2px;
+padding: .25rem 1rem;
+color: #333333;
+margin-right: .75rem;
 }
 .buttonGroups .btn.btnSelect, .buttonGroups .btn:hover {
 	background: #00b3b5;
@@ -235,39 +235,39 @@ section {
 }
 .fileuploadWrap {
 	border: 1px solid #f9b5ad;
-    background: #f36a5a;
-    height: 30px;
-    position: relative;
-    color: #fff;
-    padding: 0.2rem 1rem;
-    border-radius: 2px;
-    display: inline-block;
-    font-size: 14px;
+background: #f36a5a;
+height: 30px;
+position: relative;
+color: #fff;
+padding: 0.2rem 1rem;
+border-radius: 2px;
+display: inline-block;
+font-size: 14px;
 	cursor: pointer;
 }
 .fileuploadWrap:hover {
 	background: #ea6757;
 }
 input.fileupload {
-    width: 100%;
-    opacity: 0;
-    background: green;
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
+width: 100%;
+opacity: 0;
+background: green;
+position: absolute;
+left: 0;
+top: 0;
+bottom: 0;
+right: 0;
 }
 .b0 {
 	border: 0 !important;
 }
 .regNumberBox {
 	border: 1px solid #b5b5b5;
-    background: #f5f5f5;
-    padding: 0.2rem 1rem;
-    border-radius: 2px;
-    font-size: 14px;
-    height: 30px;
+background: #f5f5f5;
+padding: 0.2rem 1rem;
+border-radius: 2px;
+font-size: 14px;
+height: 30px;
 }
 .grayText {
 	color: #333 !important;
@@ -292,11 +292,11 @@ input.fileupload {
 .uploadPlaceHolder h2 {
 	font: 16px/30px "open_sanssemibold";
 	font-weight: normal;
-    color: #00aeef;
-    padding: 0 0 25px;
-    margin: 0;
-    text-transform: uppercase;
-    text-align: center;
+color: #00aeef;
+padding: 0 0 25px;
+margin: 0;
+text-transform: uppercase;
+text-align: center;
 }
 
 #newRegClaims .modal-dialog {
@@ -307,7 +307,7 @@ input.fileupload {
 	table-layout: fixed;
 }
 #newRegClaims .table thead th {
-    border-bottom: 1px solid #dee2e6;
+border-bottom: 1px solid #dee2e6;
 	font: 13px/24px "open_sanssemibold";
 	font-weight: normal;
 	white-space: nowrap;
@@ -352,34 +352,34 @@ input.fileupload {
 }
 .innerRight .custom-control {
 	width: 24px;
-    height: 24px;
-    padding: 0;
-    margin: 0;
-    display: inline-block;
+height: 24px;
+padding: 0;
+margin: 0;
+display: inline-block;
 }
 .innerRight .custom-control-input {
 	height: 24px;
-    width: 24px;
-    left: 0;
-    top: 0;
+width: 24px;
+left: 0;
+top: 0;
 	z-index: 1;
 }
 .innerRight .custom-control-label::before {
 	width: 24px;
-    height: 24px;
+height: 24px;
 	top: 0;
 	background-color: #ffffff;
-    border: 1px solid #dee2e6;
+border: 1px solid #dee2e6;
 }
 .innerRight .custom-radio .custom-control-input:checked~.custom-control-label::before {
-    border: 1px solid #007bff;
+border: 1px solid #007bff;
 	background: #fff;
 }
 .innerRight .custom-radio .custom-control-input:checked~.custom-control-label::after {
-    background: #007bff;
-    border-radius: 50%;
-    left: 4px;
-    top: 4px;
+background: #007bff;
+border-radius: 50%;
+left: 4px;
+top: 4px;
 }
 .title {
 	font: normal 16px/24px "open_sanssemibold";
@@ -441,8 +441,8 @@ input.fileupload {
 	background: #007bff;
 }
 .custSelectBtn .oi {
-    position: relative;
-    top: 4px;
+position: relative;
+top: 4px;
 	display: none;
 }
 .custSelectBtnSected .oi {
@@ -454,7 +454,7 @@ input.fileupload {
 	background-color: #eceaea;
 	border-color: #eceaea;
 	height: calc(2.25rem - 10px);
-    padding: .2rem 1.75rem .2rem .75rem;
+padding: .2rem 1.75rem .2rem .75rem;
 	border-radius: 2px;
 }
 .innerFilter {
@@ -462,7 +462,7 @@ input.fileupload {
 	background-color: transparent;
 	border: none;
 	height: calc(2.25rem - 10px);
-    padding: .2rem 1.75rem .2rem .75rem;
+padding: .2rem 1.75rem .2rem .75rem;
 	border-radius: 2px;
 	margin-top: -0.2rem;
 }
@@ -480,7 +480,7 @@ input.fileupload {
 	overflow: auto;
 }
 #finilizationCont .tablLal {
-    width: 140px;
+width: 140px;
 }
 #finilizationCont .tablLal1 {
 	width: 120px;
@@ -493,7 +493,7 @@ input.fileupload {
 }
 .processedStatus .btn {
 	border-radius: 15px;
-    font-size: 12px;
+font-size: 12px;
 	margin: 0.2rem 0 0.5rem;
 }
 #finilizationCont strong {
@@ -561,10 +561,10 @@ input.fileupload {
 }
 
 .upload-file-icon {
-	font-size: 20px;          
+	font-size: 20px; 
 	float:right; 
 	margin-right: 20px;
-	margin-top:-86px;        
+	margin-top:-86px; 
 	border: 2px solid #d3d8de;
 	padding: 6px;
 	border-radius: 50%;
@@ -584,6 +584,10 @@ md-input-container.md-block {
 	margin: 0px;
 }
 
+md-input-container.md-block .md-input {
+	height: 25px;
+}
+
 .flex-gt-sm .md-input,
 md-select .md-select-value,
 .md-datepicker-input-container .md-input {
@@ -592,22 +596,22 @@ md-select .md-select-value,
 }
 
 md-input-container .md-errors-spacer {
-	min-height: 0px;	
+	min-height: 0px;    
 	position: relative;
 }
 
 md-input-container.md-default-theme .md-placeholder,
- md-input-container .md-placeholder,
-  md-input-container.md-default-theme label,
-   md-input-container label {
+md-input-container .md-placeholder,
+md-input-container.md-default-theme label,
+md-input-container label {
 	font: 16px "open_sanssemibold";
-    color: #333333;
+color: #333333;
 }
 
 .fldsWrap md-input-container.md-default-theme .md-placeholder,
 md-input-container .md-placeholder,
- md-input-container.md-default-theme label,
-  md-input-container label, 
+md-input-container.md-default-theme label,
+md-input-container label, 
 	md-input-container md-select label,
 	.md-select-placeholder{
 	font: 14px/20px "open_sanssemibold" !important;
@@ -628,7 +632,7 @@ md-input-container.md-input-focused label,
 md-input-container md-select label,
 .md-input-focused .md-select-placeholder span {
 	font: 16px "open_sansregular" !important;
-    color: #f26b21 !important;
+color: #f26b21 !important;
 }
 .colborder {
 	border-left: 1px solid #e6e6e6;
@@ -642,14 +646,14 @@ md-input-container md-select label,
 }
 
 .claimReqColm {
-    border: 1px solid #b3b3b3;
-    border-radius: 3px;
+border: 1px solid #b3b3b3;
+border-radius: 3px;
 	margin: 0 3px;
 	width: 100%;
 }
 
 .modal-header {
-    padding: 15px;
+padding: 15px;
 	border-bottom: 1px solid #e5e5e5;
 	display: block;
 }
@@ -658,7 +662,7 @@ md-input-container md-select label,
 	text-align: center;
 	padding: 0!important;
 }
-  
+
 .modal:before {
 	content: '';
 	display: inline-block;
@@ -722,15 +726,15 @@ md-input-container md-select label,
 }
 .infoToggleBtn {
 	color: #fff;
-    background: #125872;
-    display: inline-block;
-    font-size: 12px;
-    text-transform: uppercase;
-    padding: 0.35rem 1rem 0.4rem 0.75rem;
-    border-radius: 0 4px 4px 0;
+background: #125872;
+display: inline-block;
+font-size: 10px;
+text-transform: uppercase;
+padding: 0.35rem 1rem 0.4rem 0.75rem;
+border-radius: 0 4px 4px 0;
 	position: absolute;
-    left: -1rem;
-    top: 0;
+left: -1rem;
+top: 0;
 	text-align: center;
 }
 .infoToggleBtn:hover, .infoToggleBtn:focus {
@@ -787,14 +791,14 @@ footer li strong {
 }
 .footerLink .oi {
 	display: block;
-    margin: 0 auto 3px;
-    width: 34px;
-    height: 34px;
-    border: 1px solid #0090ff;
+margin: 0 auto 3px;
+width: 34px;
+height: 34px;
+border: 1px solid #0090ff;
 	color: #0090ff;
-    border-radius: 50%;
-    padding-top: 8px;
-    text-align: center;
+border-radius: 50%;
+padding-top: 8px;
+text-align: center;
 }
 .infoList {
 	list-style: none;
@@ -832,9 +836,9 @@ footer li strong {
 }
 .requstListLeftArrow, .requstListRightArrow {
 	font-size: 24px;
-    font-weight: normal;
-    display: block;
-    float: left;
+font-weight: normal;
+display: block;
+float: left;
 }
 .requstListRightArrow {
 	float: right;
@@ -877,9 +881,9 @@ footer li strong {
 }
 .currencyType {
 	background: #cfd2d8;
-    border-radius: 2px;
-    padding: 0.2rem .5rem;
-    margin-left: 0.75rem;
+border-radius: 2px;
+padding: 0.2rem .5rem;
+margin-left: 0.75rem;
 }
 .claimStatusBtns .btn-secondary {
 	background: #4e5e82;
@@ -887,7 +891,7 @@ footer li strong {
 }
 .claimStatusBtns .btn-secondary .oi {
 	top: 3px;
-    position: relative;
+position: relative;
 }
 .custCheckboxBtn, .tablColmArrow {
 	border: 1px solid #d1d1d1;
@@ -901,7 +905,7 @@ footer li strong {
 .custCheckboxBtn .oi {
 	opacity: 0;
 	position: relative;
-    top: 4px;
+top: 4px;
 	-webkit-transition: opacity 300ms linear;
 	-moz-transition: opacity 300ms linear;
 	-ms-transition: opacity 300ms linear;
@@ -911,7 +915,7 @@ footer li strong {
 .tablColmArrow .oi {
 	color: #333;
 	position: relative;
-    top: 4px;
+top: 4px;
 }
 .custCheckboxBtnSected, .custCheckboxBtnSected:hover {
 	border: 1px solid #a0cdf7;
@@ -929,43 +933,43 @@ footer li strong {
 }
 
 .claimReqColm .filedsWrap {
-    padding: 7px 10px 17px;
-    position: relative;
+padding: 7px 10px 17px;
+position: relative;
 }
 .claimReqColm label {
 	position: relative;
-    top: 7px;
-    font: 13px/18px "open_sanssemibold";
+top: 7px;
+font: 13px/18px "open_sanssemibold";
 	white-space: nowrap;
-    color: #333333;
-    padding: 0;
-    margin: 0;
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -ms-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
+color: #333333;
+padding: 0;
+margin: 0;
+-webkit-transition: all 300ms ease-out;
+-moz-transition: all 300ms ease-out;
+-ms-transition: all 300ms ease-out;
+-o-transition: all 300ms ease-out;
+transition: all 300ms ease-out;
 }
 .claimReqColm input {
-    position: absolute;
-    top: 25px;
-    left: 10px;
-    z-index: 2;
-    width: calc(100% - 30px);
-    font: 16px/20px "open_sanssemibold";
-    color: #333333;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    background: none;
+position: absolute;
+top: 25px;
+left: 10px;
+z-index: 2;
+width: calc(100% - 30px);
+font: 16px/20px "open_sanssemibold";
+color: #333333;
+padding: 0;
+margin: 0;
+border: 0;
+background: none;
 }
 .claimReqColm input:focus {
 	outline: none;
 }
 .claimReqColm .inputFilled label {
-    top: -10px;
-    font: 12px/16px "open_sansregular";
-    color: #f26b21;
+top: -10px;
+font: 12px/16px "open_sansregular";
+color: #f26b21;
 }
 .withoutBorWrap .claimReqColm {
 	border: 0;
@@ -983,14 +987,14 @@ footer li strong {
 }
 .claimReqLink .oi {
 	width: 20px;
-    height: 20px;
-    background: #686868;
-    border-radius: 50%;
-    display: inline-block;
-    text-align: center;
-    font-size: 10px;
-    color: #fff;
-    padding-top: 2px;
+height: 20px;
+background: #686868;
+border-radius: 50%;
+display: inline-block;
+text-align: center;
+font-size: 10px;
+color: #fff;
+padding-top: 2px;
 }
 .leftContentPart {
 	width: 270px;
@@ -1031,7 +1035,9 @@ footer li strong {
 }
 .eclaimReqSetBtn {
 	font-size: 14px;
-	color: #333;
+color: #333;
+padding: 7px 0px;
+display: inline-block;
 }
 .eclaimReqSetBtn:after {
 	display: none;
@@ -1044,17 +1050,17 @@ footer li strong {
 	background: #fc4b6c;
 	border-bottom: 0 !important;
 	color: #fff;
-	padding: 0.75rem 0.25rem;
+	padding: 0.25rem 0.25rem;
 	font-weight: normal;
 }
 .eclaimRequestTabl th:first-child {
 	width: 80px;
 }
 .ui-grid-cell {
-	padding: 0.75rem 0.25rem !important;
+	padding: 0px !important;
 	vertical-align: middle !important;
 	border-top: 1px solid #dee2e6 !important;
-	height: 50px !important;
+	height: 30px !important;
 	font: 12px/16px "open_sansregular";
 	table-layout: fixed;
 	/* border-right: none !important; */
@@ -1063,15 +1069,17 @@ footer li strong {
 	display: block;
 	white-space: nowrap;
 	text-overflow: ellipsis;
-    overflow: hidden;
+overflow: hidden;
 }
 .eclaimRequestTabl .custCheckboxBtn {
-	width: 24px;
-    height: 24px;
-	display: inline-block;
-	margin: 0 auto;
-	float: inherit;
-	margin-left: 5px;
+	width: 18px;
+height: 18px;
+display: inline-block;
+float: inherit;
+margin: 6px 5px;
+}
+.eclaimRequest .custCheckboxBtn .oi {
+	top: 1px;
 }
 .reimbListViewTabl {
 	width: auto;
@@ -1084,8 +1092,8 @@ footer li strong {
 }
 .createNewBtn {
 	border-radius: 18px;
-    text-transform: uppercase;
-    padding: .375rem 1.25rem;
+text-transform: uppercase;
+padding: .375rem 1.25rem;
 }
 .reimbListTabl {
 	background: #fff;
@@ -1099,11 +1107,11 @@ footer li strong {
 .medicalCardInfoBox {
 	background: #1d344c;
 	padding: 0;
-    position: absolute;
-    right: -15px;
-    top: -17px;
-    color: #fff;
-    width: 0;
+position: absolute;
+right: -15px;
+top: -17px;
+color: #fff;
+width: 0;
 	height: 88px;
 	white-space: nowrap;
 	overflow: hidden;
@@ -1115,7 +1123,7 @@ footer li strong {
 }
 .medicalCardInfoBoxShow {
 	width: 300px;
-    padding: 0.45rem;
+padding: 0.45rem;
 }
 .medicalCardInfoBox h3 {
 	padding: 0 0 0 0.5rem;
@@ -1151,8 +1159,8 @@ footer li strong {
 .accordion-input md-input-container md-select label,
 .accordion-input .md-input-focused .md-select-placeholder span {
 	top: -21px !important;
-    font: 16px "open_sansregular" !important;
-    color: #6492a3 !important;	
+font: 16px "open_sansregular" !important;
+color: #6492a3 !important;  
 }
 
 .accordion-input .fldsWrap .md-input-has-value {
@@ -1165,7 +1173,7 @@ footer li strong {
 }
 
 .createNewBtn{
-    border-radius:18px;
+border-radius:18px;
 }
 
 .Finalize{
@@ -1197,19 +1205,19 @@ footer li strong {
 
 .cstmDropdown-menu {
 	left: 50px;
-    position: fixed;
-    z-index: 1000;
-    display: none;
-    float: left;
-    min-width: 10rem;
-    padding: .5rem 0;
-    margin: .125rem 0 0;
-    color: #212529;
-    text-align: left;
-    list-style: none;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.15);
+position: fixed;
+z-index: 1000;
+display: none;
+float: left;
+min-width: 10rem;
+padding: .5rem 0;
+margin: .125rem 0 0;
+color: #212529;
+text-align: left;
+list-style: none;
+background-color: #fff;
+background-clip: padding-box;
+border: 1px solid rgba(0,0,0,.15);
 	border-radius: .25rem;
 }
 
