reimbursment claims processing screen added

--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -164,7 +164,7 @@
                                     <input type="text" ng-model="regDetail.ibanNum" />
                                 </md-input-container>
                             </div>     -->
-                            <div class="claimReqColm float-left">
+                            <div class="col-sm-12 claimReqColm float-left">
                                 <div class="filedsWrap" ng-init="ibanNum=false" ng-class="{inputFilled : ibanNum || regDetail.ibanNum}">
                                     <label>IBAN Number</label>
                                     <input type="text" class="claimReqIput" ng-model="regDetail.ibanNum" ng-focus="ibanNum=true" ng-blur="ibanNum=false">
