--- a/css/style.css
+++ b/css/style.css
@@ -646,14 +646,14 @@ color: #f26b21 !important;
 }
 
 .claimReqColm {
-border: 1px solid #b3b3b3;
-border-radius: 3px;
+	border: 1px solid #b3b3b3;
+	border-radius: 3px;
 	margin: 0 3px;
-	width: 100%;
+	/* width: 100%; */
 }
 
 .modal-header {
-padding: 15px;
+	padding: 15px;
 	border-bottom: 1px solid #e5e5e5;
 	display: block;
 }
@@ -1254,6 +1254,12 @@ border: 1px solid rgba(0,0,0,.15);
 	overflow: auto;
 }
 
+#reimbursment {
+	height: calc( 100% - 145px ) !important;
+	position: relative;
+	overflow: auto;
+}
+
 footer {
 	position: fixed;
 	left: 0;
@@ -1262,3 +1268,34 @@ footer {
 	color: white;
 	text-align: center;
  }
+
+.background-color-white {
+	background-color: white !important;
+}
+
+.padding-around-15px {
+	padding: 15px 15px 15px 15px !important;
+}
+
+.inputs-border-bottom {
+	border-bottom: 1px solid gray;
+}
+
+.padding-top-10px {
+	padding-top: 10px !important;
+}
+
+.input-box-border {
+	border: 1px solid #b3b3b3;
+}
+
+.override-md-input-margin-top-18px {
+	margin-top: 18px;
+}
+
+/* please revisit this class */
+.claimReqColm_reimbur {
+	border: 1px solid #b3b3b3;
+	border-radius: 3px;
+	margin: 0 3px;
+}
