--- a/resources/finalization/view/finalization.html
+++ b/resources/finalization/view/finalization.html
@@ -1,3 +1,6 @@
+<nav class="navbar pt-1 pb-1">
+    <span class="navbar-brand p-0 m-0" ui-sref="claim-registration">Finalization</span>
+</nav>
 <div class="searchBar">
     <div class="searchBarRow">
         <div layout-gt-sm="row">
