--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -5,33 +5,33 @@
     <div class="leftContainer">
         <div class="searchBar">
             <div class="searchBarRow">
-                <div layout-gt-sm="row">
-                    <div style="border-left: 1px solid #e6e6e6;">
+                <div layout-gt-sm="row" style="height:auto !important">
+                    <div style="border-left: 1px solid #e6e6e6; width: auto !important;">
                         <md-input-container flex-gt-sm>
                             <label>Member Number</label>
                             <input ng-model="search.memberNumber">
                         </md-input-container>
                     </div>    
-                    <div style="border-left: 1px solid #e6e6e6;">
+                    <div style="border-left: 1px solid #e6e6e6; width: auto !important;">
                         <md-input-container flex-gt-sm>
                             <label>Policy Number</label>
                             <input ng-model="search.policyNumber">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6;">
+                    <div style="border-left: 1px solid #e6e6e6; width: auto !important;">
                         <md-input-container flex-gt-sm>
                             <label>Voucher Number</label>
                             <input ng-model="search.voucherNumber">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; min-width:230px;">
+                    <div style="border-left: 1px solid #e6e6e6; width: auto !important;">
                         <md-input-container flex-gt-sm>
                             <label>Previous Request Number</label>
                             <input ng-model="search.requestNumber">
                         </md-input-container>
                     </div>
                 </div>
-                <div class="searchColm align-middle text-center" ng-click="searchClaims();">
+                <div class="searchColm align-middle text-center" ng-click="searchClaims();" style="width: auto !important;">
                     <a href="javascript:;" data-toggle="modal" data-target="#newRegClaims" class="searBtn mt-1 ml-3 mr-3 align-middle">
                         <span class="oi align-middle" data-glyph="magnifying-glass"></span>
                     </a>
