Changes on Cliam Processing..

--- a/resources/eclaim/view/eclaim.html
+++ b/resources/eclaim/view/eclaim.html
@@ -122,7 +122,7 @@
                 </div>                
             </div>
             <div class="rightContentPart float-right pr-0 pb-3">
-                <a href="javascript:;" class="infoToggleBtn" ng-class="{'infoToggleBtnToggled' : infoToggle}" ng-click="infoToggle = !infoToggle"><span class="oi" data-glyph="arrow-left"></span> <br />info</a>
+                <a href="javascript:;" class="infoToggleBtn" ng-class="{'infoToggleBtnToggled' : infoToggle}" ng-click="infoToggle = !infoToggle"><span class="oi" data-glyph="arrow-right"></span> <br />info</a>
                 <div class="medicalCardInfoBox medicalCardInfoBoxShow" id="medicalCardInfoBox" ng-class="{'medicalCardInfoBoxShow' : !infoToggle}">
                     <h3>Medical card info</h3>
                     <ul>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="eclaimRequest text-center mt-4">
                     <div class="clearfix">
-                        <a href="javascript:;" class="custCheckboxBtn float-left mt-2 mb-2 mr-3 ml-2">
+                        <a href="javascript:;" class="custCheckboxBtn float-left" style="margin: 15px 9px 0px 6px !important;">
                             <span class="oi" data-glyph="check"></span>
                         </a>
                         <div class="btn-group btn-group-sm claimStatusBtns mt-2 mb-2 float-left" role="group" aria-label="Basic example">
