--- a/css/style.css
+++ b/css/style.css
@@ -783,10 +783,6 @@ md-input-container md-select label,
     left: 0px!important;
 }
 
-.md-datepicker-triangle-button {
-    display: none;
-}
-
 #finilizationCont tr:hover td .finalizeBtn {
     visibility: visible;
 }
@@ -935,6 +931,7 @@ footer li strong {
 
 .infoList li span {
     font-size: 13px;
+    font-weight: bold;
 }
 
 .infoList li strong {
@@ -944,7 +941,7 @@ footer li strong {
 
 .requestListWrap {
     overflow: hidden;
-    padding-top: 30px;
+    padding-top: 35px;
 }
 
 .eclaim .carousel-wrapper .track-wrapper {
@@ -961,7 +958,7 @@ footer li strong {
 
 .requstListLeftArrow,
 .requstListRightArrow {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: normal;
     display: block;
     float: left;
@@ -1011,7 +1008,7 @@ footer li strong {
 }
 
 .innerHeadText {
-    font: 22px/ 30px "open_sanssemibold";
+    font: 19px/ 30px "open_sanssemibold";
 }
 
 .currencyType {
@@ -1035,8 +1032,8 @@ footer li strong {
 .tablColmArrow {
     border: 1px solid #d1d1d1;
     background: #fff;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     border-radius: 3px;
     color: #fff;
     text-align: center;
@@ -1057,6 +1054,11 @@ footer li strong {
     color: #333;
     position: relative;
     top: 4px;
+}
+
+.tablColmArrow {
+    width: 30px !important;
+    height: 30px !important;   
 }
 
 .custCheckboxBtnSected,
@@ -1241,8 +1243,8 @@ footer li strong {
 }
 
 .eclaimRequestTabl .custCheckboxBtn {
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
     display: inline-block;
     float: inherit;
     margin: 6px 5px;
@@ -1388,28 +1390,6 @@ footer li strong {
     background: #c9cdd7;
 }
 
-.cstmDropdown-menu {
-    left: 50px;
-    position: fixed;
-    z-index: 1000;
-    display: none;
-    float: left;
-    min-width: 10rem;
-    padding: .5rem 0;
-    margin: .125rem 0 0;
-    color: #212529;
-    text-align: left;
-    list-style: none;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid rgba(0, 0, 0, .15);
-    border-radius: .25rem;
-}
-
-.cstmDropdown-menu.show {
-    display: block;
-}
-
 .pointer {
     cursor: pointer;
 }
@@ -1508,12 +1488,41 @@ footer {
 }
 
 .md-whiteframe-z1 {
-    box-shadow: none;
-	background: #cfd2d8;
-	border-radius: 20px;
-	padding: 0.2rem .5rem;
-}
-	
-.md-whiteframe-z1 {
 	box-shadow: none;
+}
+
+.dropdown-menu {
+    position: fixed !important;
+    left: 127px !important;
+    top: 35px !important;
+}
+
+@media (max-width:1400px) {
+    .table td, .table th {
+        padding: 7px 5px;
+    }
+}
+
+.p1px {
+    padding: 1px;
+}
+
+.eclaimRequestTabl .md-datepicker-input-container {
+    bottom: -6px;
+}
+
+.eclaimRequestTabl .md-datepicker-expand-triangle {
+    top: 66%;
+}
+
+.iban-box {
+    border: 1px solid #b3b3b3;
+    border-radius: 3px;
+    margin: 0 3px;
+    width:100% !important;
+}
+
+.iban-input {
+    margin-top: 18px;
+    margin-left: 7px;
 }
