--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -6,25 +6,25 @@
         <div class="searchBar">
             <div class="searchBarRow">
                 <div layout-gt-sm="row" style="height:auto !important">
-                    <div style="border-left: 1px solid #e6e6e6; width: auto !important;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label>Member Number</label>
                             <input ng-model="search.memberNumber">
                         </md-input-container>
                     </div>    
-                    <div style="border-left: 1px solid #e6e6e6; width: auto !important;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label>Policy Number</label>
                             <input ng-model="search.policyNumber">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: auto !important;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label>Voucher Number</label>
                             <input ng-model="search.voucherNumber">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; width: auto !important;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label>Previous Request Number</label>
                             <input ng-model="search.requestNumber">
