--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -6,37 +6,37 @@
         <div class="searchBar">
             <div class="searchBarRow">
                 <div layout-gt-sm="row">
-                    <div>
+                    <div style="width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Member Number</label>
                             <input ng-model="memberNumber" />
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Voucher Number</label>
                             <input ng-model="voucherNumber">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Claim Number</label>
                             <input ng-model="climeNo">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; min-width:230px;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Approved By</label>
                             <input ng-model="approvedBy">
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; min-width:230px;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Request Received From</label>
                             <md-datepicker ng-model="requestedDate" md-open-on-focus md-hide-icons="all"></md-datepicker>
                         </md-input-container>
                     </div>
-                    <div style="border-left: 1px solid #e6e6e6; min-width:230px;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Request Received To</label>
                             <md-datepicker ng-model="datePicker.date" md-open-on-focus md-hide-icons="all"></md-datepicker>
@@ -48,17 +48,22 @@
                             <input date-range-picker class="searchIput" type="text" ng-model="datePicker.date" />
                         </md-input-container>
                     </div> -->
-                    <div style="border-left: 1px solid #e6e6e6; min-width:230px;">
+                    <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
                         <md-input-container flex-gt-sm>
                             <label style="white-space: pre-line;">Assigned User</label>
                             <input ng-model="assignedUser">
                         </md-input-container>
                     </div>
-                    <div class="searchColm align-middle text-center col-sm-1">
-                        <a ng-click="click()" href="javascript:;" class="searBtn searBtnWithText mt-3 align-middle">
-                            <span class="oi align-middle" data-glyph="magnifying-glass"></span> Search
+                    <div class="searchColm align-middle text-center" ng-click="click();" style="width: auto !important;">
+                        <a href="javascript:;" data-toggle="modal" data-target="#newRegClaims" class="searBtn mt-1 ml-3 mr-3 align-middle">
+                            <span class="oi align-middle" data-glyph="magnifying-glass"></span>
                         </a>
                     </div>
+                    <!-- <div class="searchColm align-middle text-center" style="width: auto !important;">
+                        <a  href="javascript:;" class="searBtn searBtnWithText mt-3 align-middle">
+                            <span class="oi align-middle" data-glyph="magnifying-glass"></span> Search
+                        </a>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -155,7 +160,7 @@
                                                     </div>
                                                 </td>
                                                 <td class="align-middle text-center">
-                                                    <a href="javascript:;" class="custSelectBtn" ng-class="{custSelectBtnSected : c.selected}" aria-label="Select All" ng-click="c.selected = !c.selected"><span class="oi align-middle" data-glyph="check"></span></a>
+                                                    <a href="javascript:;" class="custSelectBtn" ng-class="{custSelectBtnSected : c.selected}" aria-label="Select All" ng-click="c.selected = !c.selected; assignedtouser(c);"><span class="oi align-middle" data-glyph="check"></span></a>
 
                                                 </td>
                                             </tr>
